SONAR-12111 Fix source misalignment

--- a/server/sonar-web/src/main/js/apps/issues/styles.css
+++ b/server/sonar-web/src/main/js/apps/issues/styles.css
@@ -304,6 +304,16 @@
   }
 }
 
+.issue-location {
+  display: inline-block;
+  vertical-align: top;
+  line-height: 18px;
+  height: 18px;
+  box-sizing: border-box;
+  background-color: var(--issueBgColor);
+  transition: background-color 0.3s ease;
+}
+
 .issues-workspace-list-component {
   padding: 10px 10px 6px;
 }
