--- a/server/sonar-web/src/main/js/components/SourceViewer/styles.css
+++ b/server/sonar-web/src/main/js/components/SourceViewer/styles.css
@@ -293,16 +293,6 @@
   user-select: text;
 }
 
-.issue-location {
-  display: inline-block;
-  vertical-align: top;
-  line-height: 18px;
-  height: 18px;
-  box-sizing: border-box;
-  background-color: var(--issueBgColor);
-  transition: background-color 0.3s ease;
-}
-
 .issue-location.highlighted {
   border-color: #e1e1f2;
   background-color: #e1e1f2;
